<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/featuresItem"
        android:title="@string/features_title"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/readCard"
        android:title="@string/readCardTitle"
        android:icon="@drawable/read_card_black"/>

    <item
        android:id="@+id/writeCard"
        android:title="@string/writeCardTitle"
        android:icon="@drawable/write_card_black"/>

    <item
        android:id="@+id/manageSwine"
        android:title="@string/manageSwineTitle"
        android:icon="@drawable/swine_black"/>

    <item
        android:id="@+id/vaccine"
        android:title="@string/vaccineTitle"
        android:icon="@drawable/vaccine_black"/>

    <item
        android:id="@+id/statistic"
        android:title="@string/statisticTitle"
        android:icon="@drawable/statistic_black"/>

    <item
        android:id="@+id/forum"
        android:title="@string/forumTitle"
        android:icon="@drawable/forum_black"/>

    <item
        android:id="@+id/manageStaff"
        android:title="@string/manageStaffTitle"
        android:icon="@drawable/manage_black"/>

    <item
        android:id="@+id/syncData"
        android:title="@string/syncTitle"
        android:icon="@drawable/sync_black"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logoutTitle"
        android:icon="@drawable/logout_black"/>
</menu>