<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/loginBackground"
    tools:context="vn.com.gant.pifarm.Login">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="cursive"
        android:id="@+id/txtAppName"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:id="@+id/Line"
        android:layout_alignTop="@+id/txvForgotPass"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/txtPassword"
        android:layout_above="@+id/edtPassword"
        android:layout_alignStart="@+id/edtPassword" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imgLogo"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:background="@drawable/edit_text"
        android:textColor="@color/textHint"
        android:text="@string/exampleEmail"
        android:id="@+id/edtMail"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textPassword"
        android:ems="10"
        android:background="@drawable/edit_text"
        android:textColor="@color/textHint"
        android:text="@string/password"
        android:id="@+id/edtPassword"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/edtMail" />

    <TextView
        android:text="@string/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/txtEmail"
        android:layout_above="@+id/edtMail"
        android:layout_alignStart="@+id/edtMail" />

    <Button
        android:text="@string/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:background="@color/buttonColor"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/Line"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/facebook_icon"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="39dp"
        android:id="@+id/ibtnFacebook" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/google_icon"
        android:layout_alignBottom="@+id/ibtnFacebook"
        android:layout_toEndOf="@+id/btnLogin"
        android:layout_marginStart="26dp"
        android:id="@+id/ibtnGoogle" />

    <TextView
        android:text="@string/forgotPassword"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvForgotPass"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="9dp"
        android:layout_above="@+id/ibtnFacebook"
        android:layout_alignEnd="@+id/imgLogo" />

    <TextView
        android:text="@string/textDerector"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvConnectDirector"
        android:layout_alignBaseline="@+id/txvForgotPass"
        android:layout_alignBottom="@+id/txvForgotPass"
        android:layout_toEndOf="@+id/imgLogo" />
</RelativeLayout>
